--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,9 @@
         {% endblock %}
     </head>
     <body>
+    <header>
+    {{ include('partials/nav.html.twig') }}
+    </header>
         {% block body %}{% endblock %}
     </body>
 </html>
