Ajout de parametres aux routes

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -3,6 +3,10 @@
 {% block title %}Contact
 {% endblock %}
 
+{% block stylesheets %}
+	<link rel="stylesheet" href="{{ asset('assets/css/contact.css') }}">
+{% endblock %}
+
 {% block body %}
 	<section>
 		<h1>
