--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
+    {% block head %}
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
+        <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
         {% endblock %}
 
         {% block javascripts %}
         {% endblock %}
     </head>
+    {% endblock %}
     <body>
     <header>
-    {{ include('partials/nav.html.twig') }}
+    {{ include('partials/_nav.html.twig') }}
     </header>
         {% block body %}{% endblock %}
     </body>
