Ajout de la fonction parent() dans twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,5 +18,8 @@
     {{ include('partials/_nav.html.twig') }}
     </header>
         {% block body %}{% endblock %}
+        {% block footer %}
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum, modi a? Rerum quis eum veniam excepturi consectetur in, odit enim iusto illo alias nam omnis unde odio asperiores, eligendi quia?</p>
+        {% endblock %}
     </body>
 </html>
