--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,3 +8,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa inventore maiores modi aperiam a fuga incidunt nulla dicta reiciendis, ipsum at sunt sapiente cumque natus! Vero unde exercitationem illum iure!</p>
 </section>
 {% endblock %}
+{% block footer %}
+{{ parent() }}
+<p>2024</p>
+{% endblock %}
